--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,6 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.7.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.7.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
 }
